# mouseplay

.github/workflows/: main.yml  rust.yml
loader/: Cargo.toml
loader/src/: main.rs
mouseplay/: Cargo.toml
mouseplay/src/: lib.rs
mouseplay/src/input/: raw_input.rs
