[package]
name = "mouseplay"
version = "0.1.0"
edition = "2018"

# --- ADICIONE ESTA PARTE ---
[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
# ---------------------------

[dependencies]
windows = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.16"
# (Mantenha as outras dependências que já estiverem lá)
