[package]
name = "mouseplay"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.16"
lazy_static = "1.4"
paste = "1.0"
libc = "0.2"
itoa = "1.0"

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "winbase",
    "consoleapi",
    "processenv",
    "libloaderapi",
    "sysinfoapi",
    "errhandlingapi",
    "minwindef",
    "minwinbase",
    "memoryapi",    # ADICIONADO: Resolve erro do VirtualProtect
    "windowsx",     # ADICIONADO: Resolve erro do GET_Y_LPARAM
    "std"
]
